# dbt2looker-bigquery

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  publishing.md  pyproject.toml
.github/workflows/: bump.yml  publish.yml  test.yml
dbt2looker/: cli.py  generator.py
dbt2looker_bigquery/: cli.py  enums.py  exceptions.py  generator.py  looker_enums.py  models.py  parser.py  schema.py  utils.py  warnings.py
dbt2looker_bigquery/database/: bigquery.py
dbt2looker_bigquery/database/models/: bigqueryTable.py
dbt2looker_bigquery/generators/: __init__.py  dimension.py  explore.py  measure.py  structure.py  utils.py  view.py
dbt2looker_bigquery/models/: __init__.py  dbt.py  looker.py
dbt2looker_bigquery/parsers/: __init__.py  base.py  catalog.py  database_catalog.py  exposure.py  model.py  type.py
tests/: test_applier.py  test_cli.py  test_enums.py  test_generator.py  test_integration.py  test_models.py  test_utils.py
tests/fixtures/: catalog.json
tests/fixtures/labelled/: catalog.json  manifest.json
tests/fixtures/osmosis2/: catalog.json  manifest.json
tests/fixtures/standard/: manifest.json
tests/generator/: test_custom_timeframe.py  test_date_time_dimension.py  test_dtype.py
tests/test_database/: test_database_parse.py
tests/test_parsers/: __init__.py  test_base.py  test_catalog.py  test_exposure.py  test_model.py  test_type.py
