[project]
name = "dbt2looker-bigquery"
version = "0.13.1"
description = "Generate lookml view files from dbt models for Bigquery"
requires_python = ">=3.10"
readme = "README.md"
homepage = "https://github.com/rognerud/dbt2looker-bigquery"
repository = "https://github.com/rognerud/dbt2looker-bigquery"

dependencies = [
    "lkml>=1.1",
    "pydantic>=2.0",
    "PyYAML>=5.0",
    "typing-extensions>=4.0",
    "importlib-metadata>=4",
    "rich>=13.9.4",
]
[tool.uv]

[tool.uv.workspace]
members = ["dist"]

[project.scripts]
dbt2looker = "dbt2looker_bigquery.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
